k8s-configurations/service.yaml
kind: Service
apiVersion: v1
metadata: 
  name: sendit-app
  namespace: default
  labels: 
    run: sendit-app
spec: 
  ports: 
      - protocol: TCP
        port: 80
        targetPort: 8080 
  selector: 
    run: sendit-app
  type: ClusterIP
