k8s-configurations/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: 'true'
  name: ingress
spec:
  rules:
  - host: sendit.gq
    http:
      paths:
      - path: /
        backend:
          serviceName: sendit-app
          servicePort: 80
  tls:
  - secretName: sendit-tls-cert
    hosts:
    - sendit.gq
